--- a/html/montaazmon.htm
+++ b/html/montaazmon.htm
@@ -11,11 +11,11 @@
 </head>
 
 <body>
-    <div class="container-one">
-        <div class="section-one">
-            <img src="../img/milad/logo.svg" alt="Italian Trulli">
+    <div class="menu-container">
+        <div class="logo">
+            <img src="../img/milad/logo.svg" alt="logo">
         </div>
-        <div class="section-two">
+        <div class="menu-items">
             <ul>
                 <li>
                     <a href="https://www.monta.ir/#!"> تماس با ما</a>
@@ -40,8 +40,8 @@
                 <li><a href="https://www.monta.ir/#!landingPage">  درباره ما</a></li>
             </ul>
         </div>
-        <div class="section-three">
-            <a href="https://www.monta.ir/#!login" class="button1">ورود/ثبت نام</a>
+        <div class="login-container">
+            <a href="https://www.monta.ir/#!login" class="login">ورود/ثبت نام</a>
         </div>
     </div>
 
@@ -49,14 +49,41 @@
 
 
 
-    <div class="container-two">
-        <img class="img" src="../img/img-baner/banner-desktop-1.png" alt="Italian Trulli">
+    <div class="slider-container">
+        <img class="img" src="../img/img-baner/banner-desktop-1.png" alt="baner-image">
     </div>
 
 
 
 
-    <div class="container-three"></div>
+    <div class="form-container">
+        <div class="form-container-content">
+            <span> جهت دریافت اطلاعات بیشتر و ثبت نام زیر را تکمیل کنید:</span>
+        </div>
+        <div class="form-container-input">
+            <div>
+                <form>
+                    <input type="text" id="fname" name="firstname" placeholder="نام و نام خانوادگی">
+                    <input type="text" id="lname" name="lastname" placeholder="شماره موبایل">
+                    <select id="country" name="country">
+                    <option value="Math">ریاضی</option>
+                    <option value="Experimental">تجربی</option>
+                    <option value="human">انسانی</option>
+                  </select>
+                    <input type="ثبت درخواست مشاور" value="ثبت درخواست مشاور">
+                </form>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
     <div class="container-four"></div>
     <div class="container-five"></div>
     <div class="container-six"></div>
