--- a/html/montaazmon.htm
+++ b/html/montaazmon.htm
@@ -56,25 +56,26 @@
 
 
 
-    <div class="form-container">
-        <div class="form-container-content">
-            <span> جهت دریافت اطلاعات بیشتر و ثبت نام زیر را تکمیل کنید:</span>
-        </div>
-        <div class="form-container-input">
-            <div>
-                <form>
+    <div class="form-containers">
+        <div class="form-container">
+            <div class="form-container-content">
+                <span> جهت دریافت اطلاعات بیشتر و ثبت نام زیر را تکمیل کنید:</span>
+            </div>
+            <div class="form-container-input">
+                <div class="form-container-input-items">
+                    <input type="text" name="firstname" placeholder="نام و نام خانوادگی">
+                </div>
+                <div class="form-container-input-items">
+                    <input type="text" id="fname" name="firstname" placeholder="   شماره موبایل">
+                </div>
+                <div class="form-container-input-items">
                     <input type="text" id="fname" name="firstname" placeholder="نام و نام خانوادگی">
-                    <input type="text" id="lname" name="lastname" placeholder="شماره موبایل">
-                    <select id="country" name="country">
-                    <option value="Math">ریاضی</option>
-                    <option value="Experimental">تجربی</option>
-                    <option value="human">انسانی</option>
-                  </select>
-                    <input type="ثبت درخواست مشاور" value="ثبت درخواست مشاور">
-                </form>
+                </div>
+                <button class="button button1">ثبت درخواست مشاوره</button>
             </div>
         </div>
     </div>
+
 
 
 
