--- a/html/montaazmon.htm
+++ b/html/montaazmon.htm
@@ -79,13 +79,15 @@
                 <input type="text" id="fname" name="firstname" placeholder="   شماره موبایل">
             </div>
             <div class="form-container-input-items">
-                <input type="text" id="fname" name="firstname" placeholder="نام و نام خانوادگی">
+                <input type="text" id="fname" name="firstname" placeholder=" رشته ی تحصیلی  ">
             </div>
             <div>
                 <button class="button button1">ثبت درخواست مشاوره</button>
             </div>
         </div>
     </div>
+
+
 
 
 
