--- a/html/montaazmon.htm
+++ b/html/montaazmon.htm
@@ -101,18 +101,48 @@
 
     <div class="container-four">
 
-        <div class="item1"></div>
-        <div class="item2"></div>
-        <div class="item3"></div>
-        <div class="item4"></div>
-        <div class="item5"></div>
-        <div class="item6"></div>
-        <div class="item7"></div>
-        <div class="item8"></div>
-        <div class="item9"></div>
-    </div>
-    <div class="container-five"></div>
-    <div class="container-six"></div>
+        <div class="title">
+            <div class="title-content">
+                منتآزمون 1401
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-slider">
+                <div class="box-slider-pic">
+                    <img class="image" src=" ../img/img-class/12-tajrobi.jpg " alt="12-tajrobi ">
+                </div>
+                <div class="box-slider-content">
+                    <div class="box-slider-content-level">
+                        <div class="number">12</div> مرحله آزمون هماهنگ
+                        <div class="total">+</div>
+                        <div class="number">11</div> مرحله آزمون هوشمند </div>
+                    <div class="box-slider-content-price">قیمت هر مرحله 50,000 تومان</div>
+                    <div class="box-slider-content-view">
+                        <a class="azmon" href="https://www.monta.ir/static/montazmoon/1400-1401/plan/%D8%A8%D8%B1%D9%86%D8%A7%D9%85%D9%87%20%D9%85%D9%86%D8%AA%D8%A2%D8%B2%D9%85%D9%88%D9%86%20%D8%AF%D9%88%D8%A7%D8%B2%D8%AF%D9%87%D9%85%20%D8%AA%D8%AC%D8%B1%D8%A8%DB%8C.pdf">مشاهده برنامه آزمون</a>
+                    </div>
+                </div>
+            </div>
+            <div class=" box-slider ">
+
+            </div>
+            <div class="box-slider ">
+
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+        <div class="container-five "></div>
+        <div class="container-six "></div>
 
 </body>
 
