--- a/html/montaazmon.htm
+++ b/html/montaazmon.htm
@@ -100,7 +100,6 @@
 
 
     <div class="container-four">
-
         <div class="title">
             <div class="title-content">
                 منتآزمون 1401
@@ -116,33 +115,210 @@
                         <div class="number">12</div> مرحله آزمون هماهنگ
                         <div class="total">+</div>
                         <div class="number">11</div> مرحله آزمون هوشمند </div>
-                    <div class="box-slider-content-price">قیمت هر مرحله 50,000 تومان</div>
+                    <div class="box-slider-content-price">قیمت هر مرحله: 50,000 تومان</div>
                     <div class="box-slider-content-view">
-                        <a class="azmon" href="https://www.monta.ir/static/montazmoon/1400-1401/plan/%D8%A8%D8%B1%D9%86%D8%A7%D9%85%D9%87%20%D9%85%D9%86%D8%AA%D8%A2%D8%B2%D9%85%D9%88%D9%86%20%D8%AF%D9%88%D8%A7%D8%B2%D8%AF%D9%87%D9%85%20%D8%AA%D8%AC%D8%B1%D8%A8%DB%8C.pdf">مشاهده برنامه آزمون</a>
+                        <a class="azmon" href="https://www.monta.ir/static/montazmoon/1400-1401/plan/%D8%A8%D8%B1%D9%86%D8%A7%D9%85%D9%87%20%D9%85%D9%86%D8%AA%D8%A2%D8%B2%D9%85%D9%88%D9%86%20%D8%AF%D9%88%D8%A7%D8%B2%D8%AF%D9%87%D9%85%20%D8%AA%D8%AC%D8%B1%D8%A8%DB%8C.pdf" target="blank">مشاهده برنامه آزمون</a>
                     </div>
                 </div>
             </div>
             <div class=" box-slider ">
-
+                <div class="box-slider-pic">
+                    <img class="image" src="../img/img-class/12-riazi.jpg" alt="12-riyazi ">
+                </div>
+                <div class="box-slider-content">
+                    <div class="box-slider-content-level">
+                        <div class="number">12</div> مرحله آزمون هماهنگ
+                        <div class="total">+</div>
+                        <div class="number">11</div> مرحله آزمون هوشمند </div>
+                    <div class="box-slider-content-price">قیمت هر مرحله: 50,000 تومان</div>
+                    <div class="box-slider-content-view">
+                        <a class="azmon" href="https://www.monta.ir/static/montazmoon/1400-1401/plan/%D8%A8%D8%B1%D9%86%D8%A7%D9%85%D9%87%20%D9%85%D9%86%D8%AA%D8%A2%D8%B2%D9%85%D9%88%D9%86%20%D8%AF%D9%88%D8%A7%D8%B2%D8%AF%D9%87%D9%85%20%D8%B1%DB%8C%D8%A7%D8%B6%DB%8C.pdf" target="blank">مشاهده برنامه آزمون</a>
+                    </div>
+                </div>
             </div>
             <div class="box-slider ">
-
+                <div class="box-slider-pic">
+                    <img class="image" src="../img/img-class//12-ensani.jpg" alt="12-ensani ">
+                </div>
+                <div class="box-slider-content">
+                    <div class="box-slider-content-level">
+                        <div class="number">12</div> مرحله آزمون هماهنگ
+                        <div class="total">+</div>
+                        <div class="number">11</div> مرحله آزمون هوشمند </div>
+                    <div class="box-slider-content-price">قیمت هر مرحله: 50,000 تومان</div>
+                    <div class="box-slider-content-view">
+                        <a class="azmon" href="https://www.monta.ir/static/montazmoon/1400-1401/plan/%D8%A8%D8%B1%D9%86%D8%A7%D9%85%D9%87%20%D9%85%D9%86%D8%AA%D8%A2%D8%B2%D9%85%D9%88%D9%86%20%D8%AF%D9%88%D8%A7%D8%B2%D8%AF%D9%87%D9%85%20%D8%A7%D9%86%D8%B3%D8%A7%D9%86%DB%8C.pdf"
+                            target="blank">مشاهده برنامه آزمون</a>
+                    </div>
+                </div>
             </div>
         </div>
+        <div class="box">
+            <div class="box-slider">
+                <div class="box-slider-pic">
+                    <img class="image" src="../img/img-class/11-tajrobi.jpg" alt="11-tajrobi ">
+                </div>
+                <div class="box-slider-content">
+                    <div class="box-slider-content-level">
+                        <div class="number">8</div> مرحله آزمون هماهنگ
+                        <div class="total">+</div>
+                        <div class="number">7</div> مرحله آزمون هوشمند </div>
+                    <div class="box-slider-content-price">قیمت هر مرحله: 40,000 تومان</div>
+                    <div class="box-slider-content-view">
+                        <a class="azmon" href="https://www.monta.ir/static/montazmoon/1400-1401/plan/%D8%A8%D8%B1%D9%86%D8%A7%D9%85%D9%87%20%D9%85%D9%86%D8%AA%D8%A2%D8%B2%D9%85%D9%88%D9%86%20%DB%8C%D8%A7%D8%B2%D8%AF%D9%87%D9%85%20%D8%AA%D8%AC%D8%B1%D8%A8%DB%8C.pdf" target="blank">مشاهده برنامه آزمون</a>
+                    </div>
+                </div>
+            </div>
+            <div class=" box-slider ">
+                <div class="box-slider-pic">
+                    <img class="image" src="../img/img-class/11-riazi.jpg" alt="11-riyazi">
+                </div>
+                <div class="box-slider-content">
+                    <div class="box-slider-content-level">
+                        <div class="number">8</div> مرحله آزمون هماهنگ
+                        <div class="total">+</div>
+                        <div class="number">7</div> مرحله آزمون هوشمند </div>
+                    <div class="box-slider-content-price">قیمت هر مرحله: 40,000 تومان</div>
+                    <div class="box-slider-content-view">
+                        <a class="azmon" href="https://www.monta.ir/static/montazmoon/1400-1401/plan/%D8%A8%D8%B1%D9%86%D8%A7%D9%85%D9%87%20%D9%85%D9%86%D8%AA%D8%A2%D8%B2%D9%85%D9%88%D9%86%20%DB%8C%D8%A7%D8%B2%D8%AF%D9%87%D9%85%20%D8%B1%DB%8C%D8%A7%D8%B6%DB%8C.pdf" target="blank">مشاهده برنامه آزمون</a>
+                    </div>
+                </div>
+            </div>
+            <div class="box-slider ">
+                <div class="box-slider-pic">
+                    <img class="image" src="../img/img-class/11-ensani.jpg " alt="11-ensani ">
+                </div>
+                <div class="box-slider-content">
+                    <div class="box-slider-content-level">
+                        <div class="number">8</div> مرحله آزمون هماهنگ
+                        <div class="total">+</div>
+                        <div class="number">7</div> مرحله آزمون هوشمند </div>
+                    <div class="box-slider-content-price">قیمت هر مرحله: 40,000 تومان</div>
+                    <div class="box-slider-content-view">
+                        <a class="azmon" href="https://www.monta.ir/static/montazmoon/1400-1401/plan/%D8%A8%D8%B1%D9%86%D8%A7%D9%85%D9%87%20%D9%85%D9%86%D8%AA%D8%A2%D8%B2%D9%85%D9%88%D9%86%20%DB%8C%D8%A7%D8%B2%D8%AF%D9%87%D9%85%20%D8%A7%D9%86%D8%B3%D8%A7%D9%86%DB%8C.pdf" target="blank">مشاهده برنامه آزمون</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-slider">
+                <div class="box-slider-pic">
+                    <img class="image" src=" ../img/img-class/10-tajrobi.jpg " alt="10-tajrobi ">
+                </div>
+                <div class="box-slider-content">
+                    <div class="box-slider-content-level">
+                        <div class="number">8</div> مرحله آزمون هماهنگ
+                        <div class="total">+</div>
+                        <div class="number">7</div> مرحله آزمون هوشمند </div>
+                    <div class="box-slider-content-price">قیمت هر مرحله: 40,000 تومان</div>
+                    <div class="box-slider-content-view">
+                        <a class="azmon" href="https://www.monta.ir/static/montazmoon/1400-1401/plan/%D8%A8%D8%B1%D9%86%D8%A7%D9%85%D9%87%20%D9%85%D9%86%D8%AA%D8%A2%D8%B2%D9%85%D9%88%D9%86%20%D8%AF%D9%88%D8%A7%D8%B2%D8%AF%D9%87%D9%85%20%D8%AA%D8%AC%D8%B1%D8%A8%DB%8C.pdf" target="blank">مشاهده برنامه آزمون</a>
+                    </div>
+                </div>
+            </div>
+            <div class=" box-slider ">
+                <div class="box-slider-pic">
+                    <img class="image" src="../img/img-class/10-riazi.jpg" alt="10-riyazi ">
+                </div>
+                <div class="box-slider-content">
+                    <div class="box-slider-content-level">
+                        <div class="number">8</div> مرحله آزمون هماهنگ
+                        <div class="total">+</div>
+                        <div class="number">7</div> مرحله آزمون هوشمند </div>
+                    <div class="box-slider-content-price">قیمت هر مرحله: 40,000 تومان</div>
+                    <div class="box-slider-content-view">
+                        <a class="azmon" href="https://www.monta.ir/static/montazmoon/1400-1401/plan/%D8%A8%D8%B1%D9%86%D8%A7%D9%85%D9%87%20%D9%85%D9%86%D8%AA%D8%A2%D8%B2%D9%85%D9%88%D9%86%20%D8%AF%D9%88%D8%A7%D8%B2%D8%AF%D9%87%D9%85%20%D8%B1%DB%8C%D8%A7%D8%B6%DB%8C.pdf" target="blank">مشاهده برنامه آزمون</a>
+                    </div>
+                </div>
+            </div>
+            <div class="box-slider ">
+                <div class="box-slider-pic">
+                    <img class="image" src="../img/img-class/10-ensani.jpg " alt="10-ensani ">
+                </div>
+                <div class="box-slider-content">
+                    <div class="box-slider-content-level">
+                        <div class="number">8</div> مرحله آزمون هماهنگ
+                        <div class="total">+</div>
+                        <div class="number">7</div> مرحله آزمون هوشمند </div>
+                    <div class="box-slider-content-price">قیمت هر مرحله: 40,000 تومان</div>
+                    <div class="box-slider-content-view">
+                        <a class="azmon" href="https://www.monta.ir/static/montazmoon/1400-1401/plan/%D8%A8%D8%B1%D9%86%D8%A7%D9%85%D9%87%20%D9%85%D9%86%D8%AA%D8%A2%D8%B2%D9%85%D9%88%D9%86%20%D8%AF%D9%88%D8%A7%D8%B2%D8%AF%D9%87%D9%85%20%D8%A7%D9%86%D8%B3%D8%A7%D9%86%DB%8C.pdf"
+                            target="blank">مشاهده برنامه آزمون</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-slider-row-four">
+                <div class="box-slider-row-four-pic">
+                    <img class="image-paye" src="../img/img-class/09.jpg " alt="nine ">
+                </div>
+                <div class="box-slider-row-four-content">
+                    <div class="box-slider-row-four-content-level">
+                        <div class="number">3</div> مرحله آزمون هماهنگ
+                        <div class="total">+</div>
+                        <div class="number">2</div> مرحله آزمون هوشمند </div>
+                    <div class="box-slider-row-four-content-price">قیمت هر مرحله: 30,000 تومان</div>
+                    <div class="box-slider-row-four-content-view">
+                        <a class="azmon" href="https://www.monta.ir/static/montazmoon/1400-1401/plan/%D8%A8%D8%B1%D9%86%D8%A7%D9%85%D9%87%20%D9%85%D9%86%D8%AA%D8%A2%D8%B2%D9%85%D9%88%D9%86%20%D9%86%D9%87%D9%85.pdf" target="blank">مشاهده برنامه آزمون</a>
+                    </div>
+                </div>
+            </div>
+            <div class="box-slider-row-four">
+                <div class="box-slider-row-four-pic">
+                    <img class="image-paye" src="../img/img-class//08.jpg" alt="eihgt ">
+                </div>
+                <div class="box-slider-row-four-content">
+                    <div class="box-slider-row-four-content-level">
+                        <div class="number">3</div> مرحله آزمون هماهنگ
+                        <div class="total">+</div>
+                        <div class="number">2</div> مرحله آزمون هوشمند </div>
+                    <div class="box-slider-row-four-content-price">قیمت هر مرحله: 30,000 تومان</div>
+                    <div class="box-slider-row-four-content-view">
+                        <a class="azmon" href="https://www.monta.ir/static/montazmoon/1400-1401/plan/%D8%A8%D8%B1%D9%86%D8%A7%D9%85%D9%87%20%D9%85%D9%86%D8%AA%D8%A2%D8%B2%D9%85%D9%88%D9%86%20%D9%87%D8%B4%D8%AA%D9%85.pdf" target="blank">مشاهده برنامه آزمون</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-slider-row-four">
+                <div class="box-slider-row-four-pic">
+                    <img class="image-paye" src="../img/img-class/07.jpg " alt="seven">
+                </div>
+                <div class="box-slider-row-four-content">
+                    <div class="box-slider-row-four-content-level">
+                        <div class="number">3</div> مرحله آزمون هماهنگ
+                        <div class="total">+</div>
+                        <div class="number">2</div> مرحله آزمون هوشمند </div>
+                    <div class="box-slider-row-four-content-price">قیمت هر مرحله: 30,000 تومان</div>
+                    <div class="box-slider-row-four-content-view">
+                        <a class="azmon" href="https://www.monta.ir/static/montazmoon/1400-1401/plan/%D8%A8%D8%B1%D9%86%D8%A7%D9%85%D9%87%20%D9%85%D9%86%D8%AA%D8%A2%D8%B2%D9%85%D9%88%D9%86%20%D9%87%D9%81%D8%AA%D9%85.pdf" target="blank">مشاهده برنامه آزمون</a>
+                    </div>
+                </div>
+            </div>
+            <div class="box-slider-row-four">
+                <div class="box-slider-row-four-pic">
+                    <img class="image-paye" src="../img/img-class/06.jpg" alt="six ">
+                </div>
+                <div class="box-slider-row-four-content">
+                    <div class="box-slider-row-four-content-level">
+                        <div class="number">3</div> مرحله آزمون آمادگی تیزهوشان
+
+                    </div>
+                    <div class="box-slider-row-four-content-price">قیمت هر مرحله: 30,000 تومان</div>
+                    <div class="box-slider-row-four-content-view">
+                        <a class="azmon" href="https://www.monta.ir/static/montazmoon/1400-1401/plan/%D8%A8%D8%B1%D9%86%D8%A7%D9%85%D9%87%20%D9%85%D9%86%D8%AA%D8%A2%D8%B2%D9%85%D9%88%D9%86%20%D8%B4%D8%B4%D9%85.pdf" target="blank">مشاهده برنامه آزمون</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
 
-
-
-
-
-
-
-
-
-        <div class="container-five "></div>
-        <div class="container-six "></div>
+    <div class="container-five "></div>
+    <div class="container-six "></div>
 
 </body>
 
