add box  why montaazmon

--- a/html/montaazmon.htm
+++ b/html/montaazmon.htm
@@ -44,29 +44,9 @@
             <a href="https://www.monta.ir/#!login" class="login">ورود/ثبت نام</a>
         </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <div class="slider-container">
         <img class="img" src="../img/img-baner/banner-desktop-1.png" alt="baner-image">
     </div>
-
-
-
-
     <div class="form-containers">
         <div class="form-container-content">
             <span> جهت دریافت اطلاعات بیشتر و ثبت نام زیر را تکمیل کنید:</span>
@@ -86,19 +66,6 @@
             </div>
         </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
     <div class="container-four">
         <div class="title">
             <div class="title-content">
@@ -303,7 +270,6 @@
                 <div class="box-slider-row-four-content">
                     <div class="box-slider-row-four-content-level">
                         <div class="number">۳</div> مرحله آزمون آمادگی تیزهوشان
-
                     </div>
                     <div class="box-slider-row-four-content-price">قیمت هر مرحله:۳۰,۰۰۰ تومان</div>
                     <div class="box-slider-row-four-content-view">
@@ -317,8 +283,43 @@
 
 
 
-    <div class="container-five "></div>
-    <div class="container-six "></div>
+    <div class="container-five ">
+        <div class="title">
+            <div class="title-content">
+                چرا منتاآزمون؟
+            </div>
+        </div>
+        <div class="box-why">
+            <div class="box-why-pic">
+                <div class="image-title">برای اولین بار در ایران, آزمون براساس نقاط قوت و ضعف هر دانش آموز</div><img class="picture" src="../img/whayMontaAzmmon/5.png" alt="baner">
+            </div>
+            <div class="box-why-button">
+                <div class="button-lists">
+                    <div class="button-list-one">
+                        <span>آزمون های هوشمند شخصی سازی شده</span>
+                        <div class="one">۱</div>
+                    </div>
+                    <div class=" button-list ">
+                        <span>تکالیف و تمرین های شخصی سازی شده</span>
+                        <div class="one">۲</div>
+                    </div>
+                    <div class="button-list ">
+                        <span>حذف امکان تقلب به شیوه هوشمند</span>
+                        <div class="one">۳</div>
+                    </div>
+                    <div class="button-list ">
+                        <span>گزارش گیری و وضعیت سنجی دانش آموز</span>
+                        <div class="one">۴</div>
+                    </div>
+                    <div class="button-list ">
+                        <span>منطبق با برنامه ی کلاسی منتآکادمی</span>
+                        <div class="one">۵</div>
+                    </div>
+                </div>
+                <div class="column ">
+
+                </div>
+            </div>
 
 </body>
 
