edit menu  navbar class

--- a/html/montaazmon.htm
+++ b/html/montaazmon.htm
@@ -11,39 +11,59 @@
 </head>
 
 <body>
-    <div class="menu-container">
+
+
+
+
+
+    <div class="menu-navbar ">
         <div class="logo">
-            <img src="../img/milad/logo.svg" alt="logo">
+            <img class="logo-monta" src="../img/milad/logo.svg" alt="logo-monta">
         </div>
-        <div class="menu-items">
-            <ul>
+        <div class="menu">
+            <ul class="menu-items">
                 <li>
-                    <a href="https://www.monta.ir/#!"> تماس با ما</a>
+                    <a class="link" href="https://www.monta.ir/#!">تماس با ما</a>
                 </li>
                 <li>
-                    <a href="https://www.monta.ir/v2/faq"> سوالات متداول</a>
-                </li>
-                <li><a href="https://www.monta.ir/career"> فرصت های شغلی</a></li>
-                <li>
-                    <a href="https://www.monta.ir/#!onlineboard"> پلتفرم کلاس آنلاین</a>
-                </li>
-                <li><a href="https://www.monta.ir/v2/montazmoon">منتآزمون</a></li>
-                <li>
-                    <a href="https://www.monta.ir/v2/montacademy">  منتآکادمی</a>
+                    <a class="link" href="https://www.monta.ir/v2/faq">سوالات متداول</a>
                 </li>
                 <li>
-                    <a href="https://www.monta.ir/konkour"> آمادگی کنکور</a>
+                    <a class="link" href="https://www.monta.ir/career">فرصت های شغلی</a>
                 </li>
                 <li>
-                    <a href="https://www.monta.ir/question_bank"> بانک سوال  </a>
+                    <a class="link" href="https://www.monta.ir/#!onlineboard">پلتفرم کلاس آنلاین</a>
                 </li>
-                <li><a href="https://www.monta.ir/#!landingPage">  درباره ما</a></li>
+                <li>
+                    <a class="link" href="https://www.monta.ir/v2/montazmoon">منتآزمون</a>
+                </li>
+                <li>
+                    <a class="link" href="https://www.monta.ir/v2/montacademy">منتآکادمی</a>
+                </li>
+                <li>
+                    <a class="link" href="https://www.monta.ir/konkour">آمادگی کنکور</a>
+                </li>
+                <li>
+                    <a class="link" href="https://www.monta.ir/question_bank">بانک سوال </a>
+                </li>
+                <li>
+                    <a class="link" href="https://www.monta.ir/#!landingPage">درباره ما</a>
+                </li>
             </ul>
         </div>
-        <div class="login-container">
-            <a href="https://www.monta.ir/#!login" class="login">ورود/ثبت نام</a>
+        <div class="login">
+            <a class="login-register" href="https://www.monta.ir/#!login">ورود/ثبت نام</a>
         </div>
     </div>
+
+
+
+
+
+
+
+
+
     <div class="slider-container">
         <img class="img" src="../img/img-baner/banner-desktop-1.png" alt="baner-image">
     </div>
@@ -69,7 +89,7 @@
     <div class="container-four">
         <div class="title">
             <div class="title-content">
-                منتآزمون 1401
+                منتآزمون ۱۴۰۱
             </div>
         </div>
         <div class="box">
