--- a/html/montaazmon.htm
+++ b/html/montaazmon.htm
@@ -11,11 +11,6 @@
 </head>
 
 <body>
-
-
-
-
-
     <div class="menu-navbar ">
         <div class="logo">
             <img class="logo-monta" src="../img/milad/logo.svg" alt="logo-monta">
@@ -55,37 +50,49 @@
             <a class="login-register" href="https://www.monta.ir/#!login">ورود/ثبت نام</a>
         </div>
     </div>
-
-
-
-
-
-
-
-
-
     <div class="slider-container">
-        <img class="img" src="../img/img-baner/banner-desktop-1.png" alt="baner-image">
+        <img class="monta-academy-registration" src="../img/img-baner/banner-desktop-1.png" alt="baner-monta-academy-registration">
     </div>
-    <div class="form-containers">
-        <div class="form-container-content">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <div class="form">
+        <div class="form-content">
             <span> جهت دریافت اطلاعات بیشتر و ثبت نام زیر را تکمیل کنید:</span>
         </div>
-        <div class="form-container-input">
-            <div class="form-container-input-items">
-                <input type="text" name="firstname" placeholder="نام و نام خانوادگی">
-            </div>
-            <div class="form-container-input-items">
-                <input type="text" id="fname" name="firstname" placeholder="   شماره موبایل">
-            </div>
-            <div class="form-container-input-items">
-                <input type="text" id="fname" name="firstname" placeholder=" رشته ی تحصیلی  ">
+        <div class="form-input">
+            <div>
+                <input type="text" id="fname" name="firstname" placeholder="نام و نام خانوادگی">
             </div>
             <div>
-                <button class="button button1">ثبت درخواست مشاوره</button>
+                <input type="text" id="fname" name="firstname" placeholder="شماره موبایل">
+            </div>
+            <div>
+                <input type="text" id="fname" name="firstname" placeholder="رشته ی تحصیلی">
+            </div>
+            <div>
+                <button class="applying">ثبت درخواست مشاوره</button>
             </div>
         </div>
     </div>
+
+
+
+
+
+
+
     <div class="container-four">
         <div class="title">
             <div class="title-content">
