edit box montaazmon

--- a/html/montaazmon.htm
+++ b/html/montaazmon.htm
@@ -185,7 +185,7 @@
         <div class="cards-box">
             <div class="card-slider">
                 <div class="card-pic">
-                    <img class="card-image" src=" ../img/img-class/10-tajrobi.jpg " alt="10-tajrobi ">
+                    <img class="card-image" src="../img/img-class/10-tajrobi.jpg " alt="10-tajrobi ">
                 </div>
                 <div class="card-text">
                     <div class="card-level">
@@ -236,72 +236,73 @@
             </div>
         </div>
         <div class="cards-box">
-            <div class="box-slider-row-four">
-                <div class="box-slider-row-four-pic">
-                    <img class="image-paye" src="../img/img-class/09.jpg " alt="nine ">
+            <div class="card-exam">
+                <div class="card-exam-pic">
+                    <img class="card-exam-image" src="../img/img-class/09.jpg " alt="nine ">
                 </div>
-                <div class="box-slider-row-four-content">
-                    <div class="box-slider-row-four-content-level">
+                <div class="card-exam-text">
+                    <div class="card-exam-level">
                         <div class="card-number">۳</div>مرحله آزمون هماهنگ
                         <div class="card-plus">+</div>
                         <div class="card-number">۲</div>مرحله آزمون هوشمند
                     </div>
-                    <div class="box-slider-row-four-content-price">قیمت هر مرحله: ۳۰,۰۰۰ تومان</div>
-                    <div class="box-slider-row-four-content-view">
+                    <div class="card-exam-price">قیمت هر مرحله: ۳۰,۰۰۰ تومان</div>
+                    <div class="card-exam-link">
                         <a class="print-azmon" href="https://www.monta.ir/static/montazmoon/1400-1401/plan/%D8%A8%D8%B1%D9%86%D8%A7%D9%85%D9%87%20%D9%85%D9%86%D8%AA%D8%A2%D8%B2%D9%85%D9%88%D9%86%20%D9%86%D9%87%D9%85.pdf" target="blank">مشاهده برنامه آزمون</a>
                     </div>
                 </div>
             </div>
-            <div class="box-slider-row-four">
-                <div class="box-slider-row-four-pic">
-                    <img class="image-paye" src="../img/img-class//08.jpg" alt="eihgt ">
+            <div class="card-exam">
+                <div class="card-exam-pic">
+                    <img class="card-exam-image" src="../img/img-class//08.jpg" alt="eihgt ">
                 </div>
-                <div class="box-slider-row-four-content">
-                    <div class="box-slider-row-four-content-level">
+                <div class="card-exam-text">
+                    <div class="card-exam-level">
                         <div class="card-number">۳</div>مرحله آزمون هماهنگ
                         <div class="card-plus">+</div>
                         <div class="card-number">۲</div>مرحله آزمون هوشمند
                     </div>
-                    <div class="box-slider-row-four-content-price">قیمت هر مرحله: ۳۰,۰۰۰ تومان</div>
-                    <div class="box-slider-row-four-content-view">
+                    <div class="card-exam-price">قیمت هر مرحله: ۳۰,۰۰۰ تومان</div>
+                    <div class="card-exam-link">
                         <a class="print-azmon" href="https://www.monta.ir/static/montazmoon/1400-1401/plan/%D8%A8%D8%B1%D9%86%D8%A7%D9%85%D9%87%20%D9%85%D9%86%D8%AA%D8%A2%D8%B2%D9%85%D9%88%D9%86%20%D9%87%D8%B4%D8%AA%D9%85.pdf" target="blank">مشاهده برنامه آزمون</a>
                     </div>
                 </div>
             </div>
         </div>
         <div class="cards-box">
-            <div class="box-slider-row-four">
-                <div class="box-slider-row-four-pic">
-                    <img class="image-paye" src="../img/img-class/07.jpg " alt="seven">
+            <div class="card-exam">
+                <div class="card-exam-pic">
+                    <img class="card-exam-image" src="../img/img-class/07.jpg " alt="seven">
                 </div>
-                <div class="box-slider-row-four-content">
-                    <div class="box-slider-row-four-content-level">
+                <div class="card-exam-text">
+                    <div class="card-exam-level">
                         <div class="card-number">۳</div>مرحله آزمون هماهنگ
                         <div class="card-plus">+</div>
                         <div class="card-number">۲</div>مرحله آزمون هوشمند
                     </div>
-                    <div class="box-slider-row-four-content-price">قیمت هر مرحله: ۳۰,۰۰۰ تومان</div>
-                    <div class="box-slider-row-four-content-view">
+                    <div class="card-exam-price">قیمت هر مرحله: ۳۰,۰۰۰ تومان</div>
+                    <div class="card-exam-link">
                         <a class="print-azmon" href="https://www.monta.ir/static/montazmoon/1400-1401/plan/%D8%A8%D8%B1%D9%86%D8%A7%D9%85%D9%87%20%D9%85%D9%86%D8%AA%D8%A2%D8%B2%D9%85%D9%88%D9%86%20%D9%87%D9%81%D8%AA%D9%85.pdf" target="blank">مشاهده برنامه آزمون</a>
                     </div>
                 </div>
             </div>
-            <div class="box-slider-row-four">
-                <div class="box-slider-row-four-pic">
-                    <img class="image-paye" src="../img/img-class/06.jpg" alt="six ">
+            <div class="card-exam">
+                <div class="card-exam-pic">
+                    <img class="card-exam-image" src="../img/img-class/06.jpg" alt="six ">
                 </div>
-                <div class="box-slider-row-four-content">
-                    <div class="box-slider-row-four-content-level">
+                <div class="card-exam-text">
+                    <div class="card-exam-level">
                         <div class="card-number">۳</div>مرحله آزمون آمادگی تیزهوشان
                     </div>
-                    <div class="box-slider-row-four-content-price">قیمت هر مرحله:۳۰,۰۰۰ تومان</div>
-                    <div class="box-slider-row-four-content-view">
+                    <div class="card-exam-price">قیمت هر مرحله:۳۰,۰۰۰ تومان</div>
+                    <div class="card-exam-link">
                         <a class="print-azmon" href="https://www.monta.ir/static/montazmoon/1400-1401/plan/%D8%A8%D8%B1%D9%86%D8%A7%D9%85%D9%87%20%D9%85%D9%86%D8%AA%D8%A2%D8%B2%D9%85%D9%88%D9%86%20%D8%B4%D8%B4%D9%85.pdf" target="blank">مشاهده برنامه آزمون</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
 
 
 
