why monaazmon edit

--- a/html/montaazmon.htm
+++ b/html/montaazmon.htm
@@ -309,40 +309,40 @@
 
 
 
-    <div class="container-five ">
+    <div class="montaazmon-why">
         <div class="title">
-            <div class="title-content">
+            <div class="title-text">
                 چرا منتاآزمون؟
             </div>
         </div>
-        <div class="box-why">
-            <div class="box-why-pic">
-                <div class="image-title">برای اولین بار در ایران, آزمون براساس نقاط قوت و ضعف هر دانش آموز</div><img class="picture" src="../img/whayMontaAzmmon/5.png" alt="baner">
+        <div class="montaazmon-why-image">
+            <div class="montaazmon-why-content">
+                <div class="montaazmon-why-title">برای اولین بار در ایران, آزمون براساس نقاط قوت و ضعف هر دانش آموز</div><img class="picture" src="../img/whayMontaAzmmon/5.png" alt="baner">
             </div>
-            <div class="box-why-button">
-                <div class="button-lists">
-                    <div class="button-list-one">
+            <div class="montaazmon-why-buttons">
+                <div class="verticalcontent">
+                    <div class="verticalcontent-slider-color">
                         <span>آزمون های هوشمند شخصی سازی شده</span>
-                        <div class="one">۱</div>
+                        <div class="number-verticalcontent">۱</div>
                     </div>
-                    <div class=" button-list ">
+                    <div class="verticalcontent-slider">
                         <span>تکالیف و تمرین های شخصی سازی شده</span>
-                        <div class="one">۲</div>
+                        <div class="number-verticalcontent">۲</div>
                     </div>
-                    <div class="button-list ">
+                    <div class="verticalcontent-slider">
                         <span>حذف امکان تقلب به شیوه هوشمند</span>
-                        <div class="one">۳</div>
+                        <div class="number-verticalcontent">۳</div>
                     </div>
-                    <div class="button-list ">
+                    <div class="verticalcontent-slider">
                         <span>گزارش گیری و وضعیت سنجی دانش آموز</span>
-                        <div class="one">۴</div>
+                        <div class="number-verticalcontent">۴</div>
                     </div>
-                    <div class="button-list ">
+                    <div class="verticalcontent-slider">
                         <span>منطبق با برنامه ی کلاسی منتآکادمی</span>
-                        <div class="one">۵</div>
+                        <div class="number-verticalcontent">۵</div>
                     </div>
                 </div>
-                <div class="column "></div>
+                <div class="column"></div>
             </div>
         </div>
     </div>
